Add dump of config.toml for debug

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
-themeName = "Blue is good"
-primaryColor="#235099"
+themeName = "Hell"
+primaryColor="#ed4545"
 backgroundColor = "#ccd8eb"
